--- a/index.html
+++ b/index.html
@@ -40,18 +40,18 @@
 <body>
     <div class="container">
         <div class="photo">
-            <img src="your-photo.jpg" alt="Your Name">
+            <img src="your-photo.jpg" alt="Myra Haulmark">
         </div>
-        <h1>Hello, I'm [Your Name]</h1>
+        <h1>Hello, I'm Dr. Haulmark</h1>
         <p>
-            I am a [Your Profession or Role] with a passion for [Your Interests or Hobbies]. With a background in [Your Background], I have developed skills in [Your Skills]. 
-            I am currently working on [Your Current Projects or Work].
+            I am a your instructor with a passion for teaching. With a background in education, I have developed skills in data driven education. 
+            I am currently working on CAEP standard 5.
+        </p><div style="position: relative; padding-bottom: 67.58448060075094%; height: 0;"><iframe src="https://www.loom.com/embed/69f5c3be4a7f408588271486859598f9?sid=30ae015b-167e-4b96-b5ce-154a7d3a198e" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen style="position: absolute; top: 0; left: 0; width: 100%; height: 100%;"></iframe></div>
+        <p>
+            In my free time, I enjoy hanging out with my dog. I am always eager to learn new things and take on new challenges.
         </p>
         <p>
-            In my free time, I enjoy [Your Hobbies or Interests]. I am always eager to learn new things and take on new challenges.
-        </p>
-        <p>
-            Feel free to connect with me on [Your Social Media Links or Email].
+            Feel free to connect with me on Instagram.
         </p>
     </div>
 </body>
