--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 <body>
     <div class="container">
         <div class="photo">
-            <img src="your-photo.jpg" alt="Myra Haulmark">
+            <img src="23-216-005 Hogs Teach InspiRED Logo_01.png" alt="RedHub">
         </div>
         <h1>Hello, I'm Dr. Haulmark</h1>
         <p>
